k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: syed-sheraz-amjad-portfolio
    app.kubernetes.io/managed-by: kustomize
